<resources>
    <string name="app_name">Calculator</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiple">*</string>
    <string name="divide">/</string>
    <string name="dot">.</string>
    <string name="zero_number">0</string>
    <string name="nine_number">9</string>
    <string name="eight_number">8</string>
    <string name="seven_number">7</string>
    <string name="six_number">6</string>
    <string name="five_number">5</string>
    <string name="four_number">4</string>
    <string name="three_number">3</string>
    <string name="one_number">1</string>
    <string name="two_number">2</string>
    <string name="_0">0</string>
    <string name="clear">C</string>
</resources>